--- a/index.html
+++ b/index.html
@@ -194,11 +194,11 @@ flexibility(document.documentElement);
 
 
 
-<p class="has-text-align-center">Amine Mohamed Aboussalah<br>Ph.D. Candidate in Artificial Intelligence and Operations Research<br><a href="https://www.mie.utoronto.ca/" target="_blank" rel="noreferrer noopener">Department of Mechanical and Industrial Engineering</a><br><a href="https://www.utoronto.ca/" target="_blank" rel="noreferrer noopener">University of Toronto</a></p>
+<p class="has-text-align-center">Amine Mohamed Aboussalah<br>Assistant Professor<br><a href="https://engineering.nyu.edu/" target="_blank" rel="noreferrer noopener">Department of Finance and Risk Engineering</a><br><a href="https://www.nyu.edu/" target="_blank" rel="noreferrer noopener">New York University</a></p>
 
 
 
-<p class="has-text-align-center">Bahen Centre for Information Technology<br>University of Toronto<br>40 St George St, Toronto, ON M5S 2E4<br>(647) 509-7002<br>amine.aboussalah@mail.utoronto.ca</p>
+<p class="has-text-align-center">NYU Tandon FRE Department<br>New York University<br>1 MetroTech Center, Office 1001, Brooklyn, NY 11201<br> +1(929) 497-3257<br>ama10288@nyu.edu</p>
 
 
 
