--- a/index.html
+++ b/index.html
@@ -194,11 +194,15 @@ flexibility(document.documentElement);
 
 
 
-<p class="has-text-align-center">Amine Mohamed Aboussalah<br>Assistant Professor<br><a href="https://engineering.nyu.edu/" target="_blank" rel="noreferrer noopener">Department of Finance and Risk Engineering</a><br><a href="https://www.nyu.edu/" target="_blank" rel="noreferrer noopener">New York University</a></p>
+<p class="has-text-align-center">Amine Mohamed Aboussalah<br>Assistant Professor<br><a href="https://engineering.nyu.edu/" target="_blank" rel="noreferrer noopener">NYU Tandon School of Engineering</a><br><a href="https://www.nyu.edu/" target="_blank" rel="noreferrer noopener">New York University</a></p>
 
 
 
-<p class="has-text-align-center">NYU Tandon FRE Department<br>New York University<br>1 MetroTech Center, Office 1001, Brooklyn, NY 11201<br> +1(929) 497-3257<br>ama10288@nyu.edu</p>
+<p class="has-text-align-center"><a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering" target="_blank" rel="noreferrer noopener">Finance and Risk Engineering</a>
+<br>New York University
+<br>1 MetroTech Center, Office 1001, Brooklyn, NY 11201
+<br> +1 (646) 997-3599 (extension 73599)
+<br>ama10288@nyu.edu</p>
 
 
 
