--- a/teaching/index.html
+++ b/teaching/index.html
@@ -193,17 +193,19 @@ flexibility(document.documentElement);
 <meta charset="utf-8">Course Instructor, University of Toronto</h3>
 
 
+<h4>Fall 2022</h4>
+
+
+<p><a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering/fre-course-listings" target="_blank" rel="noreferrer noopener">FRE-GY7773 – Machine Learning in Financial Engineering</a></p>
+
 
 <h4>Winter 2022</h4>
-
 
 
 <p><a href="https://ecp.engineering.utoronto.ca/our-team/communication-instructors/" target="_blank" rel="noreferrer noopener">TA Mentor Program – Faculty of Applied Science and Engineering (FASE) TA Training course</a></p>
 
 
-
 <h4>Fall 2021</h4>
-
 
 
 <p><a href="https://ecp.engineering.utoronto.ca/our-team/communication-instructors/" target="_blank" rel="noreferrer noopener"> </a><a href="https://ecp.engineering.utoronto.ca/our-team/communication-instructors/" target="_blank" rel="noreferrer noopener"><meta charset="utf-8"></a><a href="https://ecp.engineering.utoronto.ca/our-team/communication-instructors/" target="_blank" rel="noreferrer noopener">TA Mentor Program – Faculty of Applied Science and Engineering (FASE) TA Training course</a></p>
