--- a/teaching/index.html
+++ b/teaching/index.html
@@ -189,8 +189,7 @@ flexibility(document.documentElement);
 
 		
 		
-<h3>
-<meta charset="utf-8">Course Instructor, University of Toronto</h3>
+<h3><meta charset="utf-8">Course Instructor, New York University</h3>
 
 
 <h4>Fall 2022</h4>
@@ -198,6 +197,8 @@ flexibility(document.documentElement);
 
 <p><a href="https://engineering.nyu.edu/academics/departments/finance-and-risk-engineering/fre-course-listings" target="_blank" rel="noreferrer noopener">FRE-GY7773 – Machine Learning in Financial Engineering</a></p>
 
+
+<h3><meta charset="utf-8">Course Instructor, University of Toronto</h3>
 
 <h4>Winter 2022</h4>
 
