--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -497,7 +497,7 @@ Finally, Amine as a scientific researcher. For people who can understand it "He 
 
 <ul>
 <li>
-<a href="https://mathkangaroo.ca/" target="_blank" rel="noreferrer noopener">Math Kangaroo Contest</a>: helped with organizing the contest (<a href="http://individual.utoronto.ca/amineaboussalah/data/certificate_CMKC_AmineMohamedAboussalah.pdf" target="_blank" rel="noreferrer noopener">certificate)</a>, 2018.</li>
+<a href="https://mathkangaroo.ca/" target="_blank" rel="noreferrer noopener">Math Kangaroo Contest</a>: helped with organizing the contest (<a href="https://github.com/ama-website/ama-website.github.io/raw/main/uploads/certificate_CMKC_AmineMohamedAboussalah.pdf" target="_blank" rel="noreferrer noopener">certificate)</a>, 2018.</li>
 
 
 
