--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -502,7 +502,7 @@ Finally, Amine as a scientific researcher. For people who can understand it "He 
 
 
 <li>
-<a href="https://cms.math.ca/competitions/" target="_blank" rel="noreferrer noopener">Canadian Open Mathematics Challenge</a>: helped with organizing the contest (<a href="http://individual.utoronto.ca/amineaboussalah/data/certificate_COMC_AmineMohamedAboussalah.pdf" target="_blank" rel="noreferrer noopener">certificate</a>), 2017.</li>
+<a href="https://cms.math.ca/competitions/" target="_blank" rel="noreferrer noopener">Canadian Open Mathematics Challenge</a>: helped with organizing the contest (<a href="https://github.com/ama-website/ama-website.github.io/raw/main/uploads/certificate_COMC_AmineMohamedAboussalah.pdf" target="_blank" rel="noreferrer noopener">certificate</a>), 2017.</li>
 
 
 
