--- a/testimonial/index.html
+++ b/testimonial/index.html
@@ -506,7 +506,7 @@ Finally, Amine as a scientific researcher. For people who can understand it "He 
 
 
 
-<li>MAP Mentoring Program: helped with establishing a pilot mentoring project designed for first-year Polytechnique Montréal undergraduate students <a href="http://individual.utoronto.ca/amineaboussalah/data/certificate_MAP_AmineMohamedAboussalah.pdf" target="_blank" rel="noreferrer noopener">(certificate</a>), 2016.<br><br>
+<li>MAP Mentoring Program: helped with establishing a pilot mentoring project designed for first-year Polytechnique Montréal undergraduate students <a href="https://github.com/ama-website/ama-website.github.io/raw/main/uploads/certificate_MAP_AmineMohamedAboussalah.pdf" target="_blank" rel="noreferrer noopener">(certificate</a>), 2016.<br><br>
 </li>
 </ul>
 
